--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "axios": "^0.22.0",
+    "bulma": "^0.9.3",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.17.1"
+    "react-hook-form": "^7.17.1",
+    "sass": "^1.42.1",
+    "simple-react-validator": "^1.6.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
